--- a/composer.json
+++ b/composer.json
@@ -18,29 +18,18 @@
             "email": "del@incube8.sg"
         }
     ],
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/twostars/paymentwall-php"
-        }
-    ],
     "require": {
-        "php": ">=5.3.3",
-        "paymentwall/paymentwall-php": "dev-master",
-        "omnipay/common": "~2.0"
+        "php": ">=7.0",
+        "paymentwall/paymentwall-php": "^2",
+        "omnipay/common": "^3"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0",
-        "omnipay/dummy": "dev-master"
+        "omnipay/tests": "^3",
+        "omnipay/dummy": "^3"
     },
     "autoload": {
         "psr-4": {
             "Omnipay\\PaymentWall\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0.x-dev"
         }
     }
 }
